add apis in swagger and create post api
