# src/models/postModel.js
@@ -2,28 +2,23 @@ const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 // MAIN SCHEMA----------------------------------******************
-let userSchema = new Schema({
-    fullname: {
+let postSchema = new Schema({
+    category: {
+        type:mongoose.Types.ObjectId
+    },
+    name: {
         type: String,
         default: ''
     },
-    email: {
-        type: String,
-        default: ''
-    },
-    phone: {
+    price: {
         type: Number,
-
+        default: 0
     },
-    role: {
-        type: String,
-    },
-    password: {
-        type: String,
-
+    createdBy: {
+        type:mongoose.Types.ObjectId
     },
 }, {
     timestamps: true,
     versionKey: false
 })
-module.exports = mongoose.model('customer', userSchema);
+module.exports = mongoose.model('post', postSchema);
